--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: kun的博客
 email: 411241127@qq.com
 url: wangbokun.com
-avatar: 
+avatar: www.wangbokun.com/assets/public/touxiang.png
 description: 一个安静的程序猿
 
 #文档配置
