--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,17 @@ avatar: assets/public/touxiang.png
 description: 一个安静的程序猿
 
 #文档配置
-# markdown: kramdown
-# kramdown:
-#   input: GFM
-#   extensions:
-#     - autolink
-#     - footnotes
-#     - smart
+markdown: kramdown
+kramdown:
+  input: GFM
+  use_coderay: true
+  syntax_highlighter: rouge
+  coderay:
+    coderay_line_numbers:  nil
+  extensions:
+    - autolink
+    - footnotes
+    - smart
 
 #高亮配置
 highlight-theme : my-github
