--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,14 @@ kramdown:
 highlight-theme : my-github
 
 #评论配置
-disqus: wangbokun.com
+# disqus: wangbokun.com
+gitalk: true
+gitalk_clientID: '3cbf7a3ec2f0319740fe'
+gitalk_Secret: 'a1ce5df248eb1933de70742778b94eccdc485727'
+gitalk_repo: '用户名.github.io'
+gitalk_owner: '用户名'
+gitalk_admin: '用户名'
+distractionFreeMode: true
 
 #统计配置
 baidu: c2b7a521cf14960bd9e90c4406dbd428
